# aloe-staking

./: README.md  pyproject.toml
staking_bot/: main.py
staking_bot/contracts/: __init__.py  aloe_predictions.py  proposal.py
staking_bot/predictors/: __init__.py  aggropredictor.py  example.py  predictor.py
tests/: test_aggro_predictor.py  test_staking_bot.py
